1.01	2016-12-21
		- Package name changed to Lazy::Utils
		- Lazy::Utils init
		- Added shellmeta method

1.01_01	2016-12-16
		- OK::Utils init